# nifty-smallcap-trading-bot

./: .gitignore  README.md  pyproject.toml  requirements-dashboard.txt  requirements-dev.txt  requirements.txt
config/: bse.nifty50.json  bse.smallcap250.json  corporate_actions.csv.example  dashboard.json  dataset.nifty50.json  dataset.smallcap250.json  move_predictor.yaml  screener.nifty50.json  screener.smallcap250.json  strategy.yaml
dashboard/: __init__.py  app.py  charts.py  data.py  move_analysis.py  reports.py  timeline.py
hermes/: hermes_config.yaml
scripts/: analyze_significant_moves.py  backtest_move_predictor.py  bse_announcements.py  bse_category_filter.py  build_equity_dataset.py  check_screener_cookies.py  consolidate_screener_excels.py  dataset_config.py  dataset_loader.py  download_bse_announcements.py  download_config.py  download_index_and_update_ohlcv.py  download_kite_ohlcv.py  download_screener_excel.py  env_utils.py  extract_announcements_per_stock.py  extract_corporate_actions.py  historical_screener.py  kite_equity.py  kite_intervals.py  kite_login.py  pdf_extract.py  regenerate_manifest.py  remove_minute_data.py  run_dashboard.sh  screener_client.py  universe_move_summary.py
tests/: dataset_fixtures.py  test_bars.py  test_config.py  test_corporate_actions_panel.py  test_costs.py  test_fundamental_screen.py  test_historical_screener.py  test_hybrid.py  test_integration.py  test_kite_auth.py  test_metrics.py  test_move_correlation.py  test_move_predictor.py  test_period_runner.py  test_risk_sizer.py  test_screener_consolidate.py  (+4 more)
(+64 files in other folders)
