[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Self-learning equity trading bot for Nifty Smallcap 100"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "lightgbm>=4.3",
    "shap>=0.45",
    "scikit-learn>=1.4",
    "kiteconnect>=5.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "click>=8.1",
    "rich>=13.0",
    "python-dateutil>=2.9",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "yfinance>=0.2",
]
dashboard = [
    "streamlit>=1.32",
    "plotly>=5.20",
    "openpyxl>=3.1",
]

[project.scripts]
trading-bot = "trading_bot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
